--- a/Src/Client/_Imports.razor
+++ b/Src/Client/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using Client
 @using Client.Shared
+
+@using Client.CMS.Components
+@using Client.Components.Content.Pages
+@using Client.Shared.Models.Content.Elements
+@using Components.Content.Pages
