--- a/Src/Client.Host/Pages/_Host.cshtml
+++ b/Src/Client.Host/Pages/_Host.cshtml
@@ -4,9 +4,9 @@
 @using Microsoft.AspNetCore.Components.Web
 
 @section StyleSheets {
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-        <link href="css/app.css" rel="stylesheet" />
-        <link href="Client.styles.css" rel="stylesheet" />
+    <link href="css/app.css" rel="stylesheet" />
+    <link href="Client.styles.css" rel="stylesheet" />
+    <link href="js/main.css" rel="stylesheet"/>
 }
 
 <component type="typeof(App)" render-mode="WebAssemblyPrerendered" />
@@ -15,8 +15,7 @@
 
 @section Scripts 
 {
-    <script src="_content/Client.Shared/js/index.bundle.js"></script>
-    <script src="_content/Microsoft.AspNetCore.Components.CustomElements/BlazorCustomElements.js"></script>
+    <script src="js/index.bundle.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 }
 
