--- a/Src/Client/Components/Content/Elements/Paragraph.razor
+++ b/Src/Client/Components/Content/Elements/Paragraph.razor
@@ -1,7 +1,21 @@
 @inherits ContentElementComponent<ParagraphElementContent>
 
-<h3>Paragraph</h3>
-
-@code {
-    
-}
+<section class="text-gray-600 body-font">
+  <div class="container px-5 py-24 mx-auto">
+    <div class="w-full mb-20">
+      <div class="w-full mb-6 lg:mb-0">
+        <h2 class="text-xs text-indigo-500 tracking-widest font-medium title-font mb-1">@Model.SubTitle</h2>
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900">
+          @Model.Title
+        </h1>
+        @if (Model.SplitterVisible)
+        {
+          <div class="h-1 w-20 bg-indigo-500 rounded"></div>
+        }
+      </div>
+      <p class="w-full leading-relaxed text-gray-500">
+        @Model.LeadText
+      </p>
+    </div>
+    </div>
+</section>
