--- a/Src/Client/Components/Content/Pages/DefaultPage.razor
+++ b/Src/Client/Components/Content/Pages/DefaultPage.razor
@@ -1,8 +1,4 @@
 @inherits ContentPageComponent<Client.CMS.Models.Content.Abstractions.PageContentBase>
 
 <PageTitle>@Model?.SeoTitle</PageTitle>
-<HeadContent>
-    
-</HeadContent>
-
-<ContentElementTemplateSelector Elements="@Model?.Elements"></ContentElementTemplateSelector>
+<ContentElementTemplateSelector Elements="@Model?.Elements"/>
