--- a/Src/Client/Pages/Index.razor
+++ b/Src/Client/Pages/Index.razor
@@ -46,6 +46,8 @@ else
         // Using this will eliminate the sudden reload
         ContentWrapper = await ContentDeliveryService.GetByUrl(PageRoute);
 
+        StateHasChanged();
+        
         _isLoading = false;
     }
 }
