--- a/Src/Client/Components/Content/Elements/HeroElement.razor
+++ b/Src/Client/Components/Content/Elements/HeroElement.razor
@@ -1,3 +1,39 @@
 @inherits ContentElementComponent<HeroElementContent>
 
-<h3>HeroElement</h3>
+<section class="text-gray-600 body-font">
+  <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+    <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
+      <h2 class="text-xs text-indigo-500 tracking-widest font-medium title-font mb-1">@Model.SubTitle</h2>
+      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">
+        @Model.Title
+      </h1>
+      @if (Model.SplitterVisible)
+              {
+                <div class="h-1 w-20 bg-indigo-500 rounded"></div>
+              }
+      <p class="mb-8 leading-relaxed">
+        @Model.LeadText
+      </p>
+      <div class="flex justify-center">
+        @foreach (var action in @Model.Actions)
+        {
+          @if (action.IsPrimary)
+          {
+            <a href="@action.Link" class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">
+              @action.Text
+            </a>
+          }
+          else
+          {
+            <a href="@action.Link" class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">
+              @action.Text
+            </a>
+          }
+        }
+        </div>
+    </div>
+    <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+      <img class="object-cover object-center rounded" alt="hero" src="@Model.ImageSrc">
+    </div>
+  </div>
+</section>
