--- a/Src/Client/Components/Content/Elements/UnknownElement.razor
+++ b/Src/Client/Components/Content/Elements/UnknownElement.razor
@@ -1,3 +1,3 @@
-@inherits ContentElementComponent<object>
+@inherits ContentElementComponent<Client.CMS.Models.Content.Abstractions.PageContentBase>
 
 <h3>UnknownElement with alias : @ContentWrapper?.ContentTypeAlias</h3>
