--- a/Src/Client/Components/Content/Elements/HeroElement.razor
+++ b/Src/Client/Components/Content/Elements/HeroElement.razor
@@ -1,8 +1,8 @@
 @inherits ContentElementComponent<HeroElementContent>
 
 <section class="text-gray-600 body-font">
-  <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-    <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
+  <div class="lg:w-2/3 container mx-auto flex flex-wrap px-5 py-24 md:flex-row flex-col items-center">
+    <div class="lg:w-2/3 lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
       <h2 class="text-xs text-indigo-500 tracking-widest font-medium title-font mb-1">@Model.SubTitle</h2>
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">
         @Model.Title
@@ -32,7 +32,7 @@
         }
         </div>
     </div>
-    <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+    <div class="lg:w-1/3 md:w-1/2 w-5/6">
       <img class="object-cover object-center rounded" alt="hero" src="@Model.ImageSrc">
     </div>
   </div>
